fix findbyname in usercontroller